Now using sexAssignedAtBirth (#217)